--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Sayangnya aa</span>
+                <span id="name">Sayang</span>
             </h1>
             <p class="two" id="greetingText">Tau ga hari ini hari apa?</p>
         </div>
